syntax = "proto3";

option go_package = "codegen/pb";

import "google/protobuf/timestamp.proto";


message CreateTransactionRequest{
  string id=1;
  string customer_id = 2;
  string product_id =  3;
  int32 quantity = 4;
  double amount = 5;
}

message CreateTransactionResponse{
  string id=1;
  google.protobuf.Timestamp created_at = 2;
}

message GetTransactionRequest{
  string id=1;
}
message GetTxnResponse{
  Transaction request = 1;
}

message Transaction {
  string id=1;
  string customer_id = 2;
  string product_id =  3;
  int32 quantity = 4;
  double amount = 5;
  google.protobuf.Timestamp created_at = 6;
}

message ListTransactionRequest {
}


service Transactions{
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse);
  rpc GetTransactionById(GetTransactionRequest) returns (GetTxnResponse);
  rpc ListTransactions(ListTransactionRequest) returns (stream GetTxnResponse);
}